# ssgx

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  NOTICE.md  README.md  build_install_external.sh  configure_pccs.md  features.md  unified_installation.md
cmake/: Installation.cmake  ssgx-build.cmake  ssgx-build.md
cmake/entrypoints/: extract_mrenclave_entry.cmake
cmake/internal/: ssgx-deps.cmake  ssgx-edl.cmake  ssgx-env.cmake  ssgx-init.cmake  ssgx-sign.cmake  ssgx-trusted.cmake  ssgx-untrusted.cmake  ssgx-utils.cmake
cmake/scripts/: color_echo.bat  color_echo.sh
common/include/: mainpage.h  ssgx_attestation_share.h  ssgx_attestation_t.edl  ssgx_attestation_t.h  ssgx_attestation_u.h  ssgx_config_t.edl  ssgx_config_t.h  ssgx_decimal_t.h  ssgx_exception_t.h  ssgx_filesystem_t.edl  ssgx_filesystem_t.h  ssgx_filesystem_t_enum.h  ssgx_http_t.edl  ssgx_http_t.h  ssgx_http_t_client.h  ssgx_http_t_filter.h  ssgx_http_t_server.h  ssgx_http_t_structs.h  ssgx_http_u.h  ssgx_json_t.h  ssgx_log_share.h  ssgx_log_t.edl  ssgx_log_t.h  ssgx_log_t_log_message.h  ssgx_log_t_logger.h  ssgx_log_u.h  ssgx_log_u_log_message.h  ssgx_log_u_logger.h  ssgx_testframework_t.h  ssgx_utils_t.edl  ssgx_utils_t.h  ssgx_utils_t_enclave_info.h  ssgx_utils_t_seal_handler.h  ssgx_utils_t_time.h  ssgx_utils_t_uuid.h
sample/http/: CMakeLists.txt  CMakePresets.json  README.md
sample/http/http_client/: CMakeLists.txt  Enclave.edl
sample/http/http_client/enc/: CMakeLists.txt  Enclave.cpp
sample/http/http_client/host/: host.cpp
sample/http/http_server/: CMakeLists.txt  Enclave.edl
sample/http/http_server/enc/: CustomFilters.h  Enclave.cpp
sample/http/http_server/host/: CMakeLists.txt  host.cpp
sample/millionaire_problem/: CMakeLists.txt  Enclave.edl  README.md
sample/millionaire_problem/enc/: CMakeLists.txt  Enclave.cpp  TrustedArbiter.cpp  TrustedArbiter.h
sample/millionaire_problem/host/: CMakeLists.txt  Millionaire.cpp  Millionaire.h  host.cpp
sample/seal/: CMakeLists.txt  Enclave.edl  README.md
sample/seal/enc/: CMakeLists.txt  Enclave.config.xml  Enclave.cpp
sample/seal/host/: CMakeLists.txt  host.cpp
ssgx/: CMakeLists.txt  ssgxConfig.cmake
ssgx/attestation/t/: CMakeLists.txt  RemoteAttestor.cpp  ssgx_attestation_tConfig.cmake.in
ssgx/attestation/u/: CMakeLists.txt  RemoteAttestor.cpp  auxiliary.cpp  auxiliary.h  ocall_attestation.cpp  ssgx_attestation_uConfig.cmake.in
ssgx/common/: auxilliary.h  custom_assert.h  internal_check.h  tseal_migration_attr.h  variable_length_args.h
ssgx/config/t/: CMakeLists.txt  ssgx_config_t.cpp  ssgx_config_tConfig.cmake.in
ssgx/config/u/: CMakeLists.txt  ocall_config_u.cpp  ssgx_config_u.cpp  ssgx_config_u.h  ssgx_config_uConfig.cmake.in
ssgx/decimal/t/: CMakeLists.txt  ssgx_decimal_t.cpp  ssgx_decimal_tConfig.cmake.in
ssgx/filesystem/t/: CMakeLists.txt  FileMetaData.cpp  FileMetaData.h  PlainFileReader.cpp  PlainFileWriter.cpp  ProtectedFileReader.cpp  ProtectedFileWriter.cpp  filesystem_constant.h  ssgx_filesystem_t.cpp  ssgx_filesystem_tConfig.cmake.in
ssgx/filesystem/u/: CMakeLists.txt  fs_auxiliary.cpp  fs_auxiliary.h  ocall_filesystem.cpp  ssgx_filesystem_uConfig.cmake.in
ssgx/http/share/: ObjectRegistry.h
ssgx/http/t/: CMakeLists.txt  ssgx_http_tConfig.cmake.in
ssgx/http/t/client/: Client.cpp  DefaultCA.h
ssgx/http/t/client/mbedtls_client/: HttpClient.cpp  HttpClient.h  HttpUrl.cpp  HttpUrl.h
ssgx/http/t/common/: Request.cpp  Response.cpp  http_utils.h
ssgx/http/t/server/: Server.cpp  ecall_http_server.cpp
ssgx/http/u/: CMakeLists.txt  ssgx_http_uConfig.cmake.in
ssgx/http/u/server/: RequestHandler.cpp  RequestHandler.h  SSGXHttpServer.cpp  SSGXHttpServer.h  http_u_server_imp.cpp  ocall_http_server.cpp
ssgx/json/t/: CMakeLists.txt  ssgx_json_t.cpp  ssgx_json_tConfig.cmake.in
ssgx/log/share/: LogMessage.cpp
ssgx/log/t/: CMakeLists.txt  LogMessage.t.cpp  SSGXLogger.cpp  ssgx_log_tConfig.cmake.in
ssgx/log/u/: CMakeLists.txt  LogHelper.cpp  LogHelper.h  LogMessage.u.cpp  SSGXLogger.cpp  ocall_log.cpp  ssgx_log_uConfig.cmake.in
ssgx/utils/t/: CMakeLists.txt  EnclaveInfo.cpp  dummy_utils.c  ecall_utils.cpp  ssgx_utils_t.cpp  ssgx_utils_tConfig.cmake.in
ssgx/utils/t/seal/: SealHandler.cpp
ssgx/utils/t/time/: DateTime.cpp  PreciseTime.cpp  TimeSpan.cpp  TimeVerifier.cpp  TimeVerifier.h  time_impl.h
ssgx/utils/t/time/musl/: __month_to_secs.c  __secs_to_tm.c  __tm_to_secs.c  __year_to_secs.c
ssgx/utils/t/uuid/: UUIDGenerator.cpp
ssgx/utils/t/uuid/uuid4/: uuid4.c  uuid4.h
ssgx/utils/u/: CMakeLists.txt  ocall_utils.cpp  ssgx_utils_uConfig.cmake.in
test/BasicTest/: CMakeLists.txt  Enclave.edl
test/BasicTest/cases/: ssgx_attestation_t_test.cpp  ssgx_config_t_test.cpp  ssgx_decimal_t_test.cpp  ssgx_filesystem_t_test.cpp  ssgx_http_t_client_test.cpp  ssgx_json_t_test.cpp  ssgx_log_t_test.cpp  ssgx_testframework_t_test.cpp  ssgx_utils_t_fmt_test.cpp  ssgx_utils_t_mem_test.cpp  ssgx_utils_t_seal_handler_test.cpp  ssgx_utils_t_test.cpp  ssgx_utils_t_time_test.cpp  ssgx_utils_t_uuid_test.cpp
test/BasicTest/enc/: CMakeLists.txt  Enclave.config.xml  Enclave.cpp
test/BasicTest/host/: CMakeLists.txt  host.cpp  ocall_imp.cpp
test/HttpTest/: CMakeLists.txt  Enclave.edl
test/HttpTest/enc/: CMakeLists.txt  Enclave.cpp
test/HttpTest/host/: CMakeLists.txt  host.cpp
test/data/BasicTest/: test.toml
